--- a/APPVIEW/Views/Home/Details.cshtml
+++ b/APPVIEW/Views/Home/Details.cshtml
@@ -77,82 +77,85 @@
             </div>
             <h3 class="font-weight-semi-bold mb-4">@Model.Price</h3>
             <p class="mb-4">@Model.Desciption</p>
-            <div class="d-flex mb-3">
-                <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
-                <form>
+            <form asp-action="AddToCart" asp-controller="Cart">
+                <input hidden name="id" value="@Model.Id" />
+                <div class="d-flex mb-3">
+                    <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
                    
-                    @{
-                        var lstS = new List<Guid>();
 
-                    }
-                    @foreach (var pd in ViewBag.lspd)
-                    {
-                        if (lstS.Any(c => c == pd.Id_Size))
-                        {
-                            continue;
+                        @{
+                            var lstS = new List<Guid>();
+
                         }
-                        @foreach (var item in ViewBag.Size)
+                        @foreach (var pd in ViewBag.lspd)
                         {
-                            if (pd.Id_Size == item.Id)
+                            if (lstS.Any(c => c == pd.Id_Size))
                             {
-                                lstS.Add(pd.Id_Size);
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="@item.Id" name="size">
-                                    <label class="custom-control-label" for="@item.Id">@item.Name</label>
-                                </div>
+                                continue;
+                            }
+                            @foreach (var item in ViewBag.Size)
+                            {
+                                if (pd.Id_Size == item.Id)
+                                {
+                                    lstS.Add(pd.Id_Size);
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" value="@item.Id" class="custom-control-input" id="@item.Id" name="size">
+                                        <label class="custom-control-label" for="@item.Id">@item.Name</label>
+                                    </div>
+
+                                }
 
                             }
-
                         }
-                    }
-                </form>
-            </div>
-            <div class="d-flex mb-4">
-                <p class="text-dark font-weight-medium mb-0 mr-3">Colors:</p>
-                <form>
-                   @{
-                        var lstC = new List<Guid>();
-                   }
-                     @foreach (var pd in ViewBag.lspd)
-                    {
-                        if (lstC.Any(c => c == pd.Id_Color))
-                        {
-                            continue;
-                        }
-                        @foreach (var item in ViewBag.Color)
-                        {
-                            if (pd.Id_Color==item.Id)
-                            { 
-                                lstC.Add(pd.Id_Color);
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="@item.Id" name="color">
-                                    <label class="custom-control-label" for="@item.Id">@item.Name</label>
-                                </div>
-                             
-                            }
                     
-                        }
-                    }
-                   
-                   
-                </form>
-            </div>
-            <div class="d-flex align-items-center mb-4 pt-2">
-                <div class="input-group quantity mr-3" style="width: 130px;">
-                    <div class="input-group-btn">
-                        <button class="btn btn-primary btn-minus">
-                            <i class="fa fa-minus"></i>
-                        </button>
-                    </div>
-                    <input type="text" class="form-control bg-secondary text-center" value="1">
-                    <div class="input-group-btn">
-                        <button class="btn btn-primary btn-plus">
-                            <i class="fa fa-plus"></i>
-                        </button>
-                    </div>
                 </div>
-                <button class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
-            </div>
+                <div class="d-flex mb-4">
+                    <p class="text-dark font-weight-medium mb-0 mr-3">Colors:</p>
+                
+                        @{
+                            var lstC = new List<Guid>();
+                        }
+                        @foreach (var pd in ViewBag.lspd)
+                        {
+                            if (lstC.Any(c => c == pd.Id_Color))
+                            {
+                                continue;
+                            }
+                            @foreach (var item in ViewBag.Color)
+                            {
+                                if (pd.Id_Color == item.Id)
+                                {
+                                    lstC.Add(pd.Id_Color);
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" value="@item.Id" class="custom-control-input" id="@item.Id" name="color">
+                                        <label class="custom-control-label" for="@item.Id">@item.Name</label>
+                                    </div>
+
+                                }
+
+                            }
+                        }
+              
+                </div>
+                <div class="d-flex align-items-center mb-4 pt-2">
+                    <div class="input-group quantity mr-3" style="width: 130px;">
+                        <div class="input-group-btn">
+                            <button type="button" class="btn btn-primary btn-minus">
+                                <i class="fa fa-minus"></i>
+                            </button>
+                        </div>
+                        <input type="number" class="form-control bg-secondary text-center" min="0" max="@Model.Quantity" value="1" name="Soluong">
+                        <div class="input-group-btn">
+                            <button type="button" class="btn btn-primary btn-plus">
+                                <i class="fa fa-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <button type="submit"  class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
+                </div>
+
+            </form>
+            
             <div class="d-flex pt-2">
                 <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
                 <div class="d-inline-flex">
@@ -324,8 +327,8 @@
                                         </div>
                                     </div>
                                         <div class="card-footer d-flex justify-content-between bg-light border">
-                                            <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                                            <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                                        <a href="@Url.Action("Details","Home",new{id=ProD.Id })" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                        <a href="@Url.Action("AddToCart","Cart",new {id=ProD.Id,Soluong=1})" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
                                         </div>
                                     </div>
                                 }
@@ -401,3 +404,6 @@
 </div>
 <!-- Products End -->
 <!-- JavaScript Libraries -->
+<script>
+  
+</script>
