--- a/APPVIEW/Views/Cart/ViewCart.cshtml
+++ b/APPVIEW/Views/Cart/ViewCart.cshtml
@@ -5,153 +5,165 @@
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
 }
 
-<h1>ViewCart</h1>
 
-<!-- Page Header Start -->
-<div class="container-fluid bg-secondary mb-5">
-    <div class="d-flex flex-column align-Model[i]s-center justify-content-center" style="min-height: 300px">
-        <h1 class="font-weight-semi-bold text-uppercase mb-3">Shopping Cart</h1>
-        <div class="d-inline-flex">
-            <p class="m-0"><a href="">Home</a></p>
-            <p class="m-0 px-2">-</p>
-            <p class="m-0">Shopping Cart</p>
+
+
+<!-- ================ start banner area ================= -->
+<section class="blog-banner-area" id="category">
+    <div class="container h-100">
+        <div class="blog-banner">
+            <div class="text-center">
+                <h1>Shopping Cart</h1>
+                <nav aria-label="breadcrumb" class="banner-breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Shopping Cart</li>
+                    </ol>
+                </nav>
+            </div>
         </div>
     </div>
-</div>
-<!-- Page Header End -->
-<!-- Cart Start -->
-<div class="container-fluid pt-5">
-    <div class="row px-xl-5">
-        <div class="col-lg-8 table-responsive mb-5">
-            <form asp-action="Updatecart" asp-controller="Cart" method="post">
-               
-            <table class="table table-bordered text-center mb-0">
-                <thead class="bg-secondary text-dark">
-                    <tr>
-                        <th>Products</th>
-                        <th>Price</th>
-                        <th>Quantity</th>                                       
-                        <th>Color</th>
-                        <th>Size</th>
-                        <th>Total</th>
-                        <th>Remove</th>
-                    </tr>
-                </thead>
-                <tbody class="align-middle">
-                  @{
+</section>
+<!-- ================ end banner area ================= -->
+<!--================Cart Area =================-->
+<section class="cart_area">
+    <div class="container">
+        <div class="cart_inner">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Product</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Size</th>
+                            <th scope="col">Color</th>
+                            <th scope="col">Total</th>
+                            <th scope="col">Remove</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                          <form asp-action="Updatecart" asp-controller="Cart" method="post">
+                             
+                        @{
 
-                        @for (int i = 0; i < Model.Count; i++)
-                        {
+                            @for (int i = 0; i < Model.Count; i++)
+                            {
                                 <input hidden asp-for="@Model[i].Id" value="@Model[i].Id" />
                                 var tt = @Model[i].Price * @Model[i].Quantity;
                                 <tr>
-                            
-                            @foreach (var img in ViewBag.Img)
-                            {
+
+                                    @foreach (var img in ViewBag.Img)
+                                    {
                                         if (img.IdProductdetail == @Model[i].Id)
-                                {
-                                <td class="align-middle"><img src="~/images/@img.Name" alt="" style="width: 50px;"> @Model[i].Name</td>
-                                }
-                            }
-                                <td class="align-middle">@Model[i].Price</td>
-                                    <td class="align-middle">
-                                        <div class="input-group quantity mx-auto" style="width: 100px;">
-                                            <div class="input-group-btn">
-                                                <button type="button" class="btn btn-sm btn-primary btn-minus">
-                                                    <i class="fa fa-minus"></i>
-                                                </button>
-                                            </div>
-                                            <input type="text" class="form-control form-control-sm bg-secondary text-center" min="0" value="@Model[i].Quantity" asp-for="@Model[i].Quantity" >
-                                            <div class="input-group-btn">
-                                                <button type="button" class="btn btn-sm btn-primary btn-plus">
-                                                    <i class="fa fa-plus"></i>
-                                                </button>
-                                            </div>
+                                        {
+                                            <td>
+                                                <div class="media">
+                                                    <div class="d-flex">
+                                                        <img src="~/images/@img.Name" style="width: 50px;" alt="">
+                                                    </div>
+                                                    <div class="media-body">
+                                                        <p>@Model[i].Name</p>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        }
+                                    }
+                                    <td >@Model[i].Price</td>
+                                    <td>
+                                     
+                                        <div class="product_count">
+                                            <input type="text"  id="sst" maxlength="12" title="Quantity:" class="input-text qty" value="@Model[i].Quantity" asp-for="@Model[i].Quantity" min="0">
+                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                                class="increase items-count" type="button">
+                                                <i class="fa fa-plus"></i>
+                                            </button>
+                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                                class="reduced items-count" type="button">
+                                                <i class="fa fa-minus"></i>
+                                            </button>
                                         </div>
                                     </td>
-                                  
+
                                     <td class="align-middle">
-                                    <select asp-for="@Model[i].Id_Size">                                                                                  
+                                        <select asp-for="@Model[i].Id_Size">
                                             @foreach (var Size in ViewBag.Size)
-                                            {                                                  
-                                                //lstS.Add(pd.Id_Size);
-                                                <option value="@Size.Id">@Size.Name</option>                                                
-                                            }                                           
+                                            {
+                                            //lstS.Add(pd.Id_Size);
+                                                <option value="@Size.Id">@Size.Name</option>
+                                            }
                                         </select>
                                     </td>
                                     <td class="align-middle">
                                         <select asp-for="@Model[i].Id_Color">
-                                    
-                       
-                                       
-                                        @foreach (var Color in ViewBag.Color)
-                                        {
-                                            
+
+
+
+                                            @foreach (var Color in ViewBag.Color)
+                                            {
+
                                                 <option value="@Color.Id">@Color.Name</option>
-                                            
-                                        }                                            
+
+                                            }
                                         </select>
                                     </td>
-                                    <td class="align-middle" >  
-                                    @tt
+                                    <td class="align-middle">
+                                        @tt
                                     </td>
-                                    <td class="align-middle"><a href="@Url.ActionLink("DeleteCartItem","Cart",new{id=Model[i].Id})" class="btn btn-sm btn-primary"><i class="fa fa-times"></i></a></td>
-                         </tr>
-                      }
-                }
-                  
-                </tbody>
-            </table>
-               
-             <div class="input-group">
-                    
-                    <div class="input-group-append">
-                        <input type="submit" class="btn btn-primary" value="Update Cart">
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="col-lg-4">
-            <form class="mb-5" action="">
-                <div class="input-group">
-                    <input type="text" class="form-control p-4" placeholder="Coupon Code">
-                    <div class="input-group-append">
-                        <button class="btn btn-primary">Apply Coupon</button>
-                    </div>
-                </div>
-            </form>
-            <div class="card border-secondary mb-5">
-                <div class="card-header bg-secondary border-0">
-                    <h4 class="font-weight-semi-bold m-0">Cart Summary</h4>
-                </div>
-                <div class="card-body">
-                    <div class="d-flex justify-content-between mb-3 pt-1">
-                        <h6 class="font-weight-medium">Subtotal</h6>
-                        <h6 class="font-weight-medium">$@ViewBag.tt</h6>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <h6 class="font-weight-medium">Shipping</h6>
-                        <h6 class="font-weight-medium">$10</h6>
-                    </div>
-                </div>
-                <div class="card-footer border-secondary bg-transparent">
-                    <div class="d-flex justify-content-between mt-2">
-                        <h5 class="font-weight-bold">Total</h5>
-                        <h5 class="font-weight-bold">$160</h5>
-                    </div>
-                    <button class="btn btn-block btn-primary my-3 py-3">Proceed To Checkout</button>
-                </div>
+                                    <td>
+                                        <a class="btn btn-light" href="@Url.ActionLink("DeleteCartItem","Cart",new{id=Model[i].Id})"><i class="fa fa-trash"></i></a>
+                                    </td>
+
+                                </tr>
+                            }
+                        }
+
+          
+                        
+                        <tr class="bottom_button">
+                            <td>
+                                <button class="button" type="submit">Update Cart</button>
+                            </td>
+                        
+                        </tr>
+                        </form>
+                        <tr>
+                            <td>
+                            </td>  <td>
+                            </td>  <td>
+                            </td>  <td>
+                            </td>
+                            <td>
+                            </td>
+                            <td>
+                                <h5>Subtotal</h5>
+                            </td>
+                            <td>
+                                <h5>$@ViewBag.tt</h5>
+                            </td>
+                        </tr>
+                     
+                        <tr class="out_button_area">
+                            <td class="d-none-l">
+                            </td> <td class="d-none-l">
+                            </td> <td class="d-none-l">
+                            </td>
+                            <td class="">
+                            </td>
+                            <td>
+                            </td><td>
+                            </td>
+                            <td>
+                                <div class="checkout_btn_inner d-flex align-items-center">
+                                    <a class="gray_btn" href="~/home/index">Continue Shopping</a>
+                                    <a class="primary-btn ml-2" href="#">Proceed to checkout</a>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-</div>
-<!-- Cart End -->
-<script>
-    function Tinhtien(){
-        var sp = document.getElementById("sl").value * 10;
-        document.getElementById("thanhtien").value = 10;
-        var total = document.getElementById("total").value;
-        
-    }
-  
-</script>
+</section>
+<!--================End Cart Area =================-->
